--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=boot
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/tutorial_db
+spring.datasource.username=tutorial_user
+spring.datasource.password=tutorial_pass
+# Specify the driver class (usually auto-detected, but good to be explicit sometimes)
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+# Let Flyway handle schema
+spring.jpa.hibernate.ddl-auto=validate
+# Optional: for debugging
+spring.jpa.show-sql=true
+# Optional: specify dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Flyway Configuration (if needed, usually auto-configured well)
+spring.flyway.enabled=true
+# If you have existing tables
+spring.flyway.baseline-on-migrate=true
+
+# Server Port (Optional, default is 8080)
+# server.port=8080
