Chage to revive db connetction in app

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=boot
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/tutorial_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/tutorial_db
 spring.datasource.username=tutorial_user
 spring.datasource.password=tutorial_pass
 # Specify the driver class (usually auto-detected, but good to be explicit sometimes)
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 # Let Flyway handle schema
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 # Optional: for debugging
 spring.jpa.show-sql=true
 # Optional: specify dialect
