Refactor user roles and authorities: remove UserRole, introduce AuthorityEnum, and update related mappers and DTOs. Add HikariCP dependency and initial database schema migration.

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>6.2.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
