--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16.4-alpine
@@ -19,7 +17,7 @@ services:
       retries: 5
 
   redis:
-    image: redis:7.4.1-alpine # Use a specific, stable version
+    image: redis:8.2.3-alpine # Use a specific, stable version
     container_name: tutorial_redis
     ports:
       - "6379:6379"
@@ -35,8 +33,13 @@ services:
   app:
     build:
       context: .
+      target: development
       tags: 
       - "tutorial_boot:latest"
+    develop:
+      watch:
+        - action: rebuild
+          path: .
     depends_on:
       postgres:   # Wait for Postgres to be healthy
         condition: service_healthy
@@ -51,6 +54,7 @@ services:
       SPRING_DATA_REDIS_PORT: "6379"
     ports:
       - "8080:8080"
+      - "8000:8000"
     healthcheck:
       test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
       interval: 30s
