--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:16.4-alpine
@@ -19,7 +17,7 @@ services:
       retries: 5
 
   redis:
-    image: redis:7.4.1-alpine # Use a specific, stable version
+    image: redis:8.2.3-alpine # Use a specific, stable version
     container_name: tutorial_redis
     ports:
       - "6379:6379"
@@ -31,6 +29,40 @@ services:
       interval: 10s
       timeout: 3s
       retries: 3
+
+  app:
+    build:
+      context: .
+      target: development
+      tags:
+        - "tutorial_boot:latest"
+    develop:
+      watch:
+        - action: rebuild
+          path: .
+    depends_on:
+      postgres:   # Wait for Postgres to be healthy
+        condition: service_healthy
+      redis:      # Wait for Redis to be healthy
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/tutorial_db
+      SPRING_DATASOURCE_USERNAME: tutorial_user
+      SPRING_DATASOURCE_PASSWORD: tutorial_pass
+      SPRING_JPA_HIBERNATE_DDL_AUTO: validate
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: "6379"
+      APP_TEMP_ADMIN_USERNAME: admin
+      APP_TEMP_ADMIN_PASSWORD: admin
+    ports:
+      - "8080:8080"
+      - "8000:8000"
+    healthcheck:
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s # Give the app more time to start initially
 
 # Define the volume(s)
 volumes:
