Add batch setting to jdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.application.name=boot
 spring.datasource.url=jdbc:postgresql://localhost:5433/tutorial_db
 spring.datasource.username=tutorial_user
 spring.datasource.password=tutorial_pass
+hibernate.jdbc.batch_size=20
 # Specify the driver class (usually auto-detected, but good to be explicit sometimes)
 # spring.datasource.driver-class-name=org.postgresql.Driver
 
