--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,14 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>
+                spring-boot-starter-data-redis-reactive
+            </artifactId>
+        </dependency>
+        <dependency>
+            <groupId>
+                org.springframework.boot
+            </groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
