--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,12 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webflux</artifactId>
-            <version>7.0.0</version>
+            <groupId>
+                org.springframework.boot
+            </groupId>
+            <artifactId>
+                spring-boot-starter-webflux
+            </artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
