--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,25 @@
 services:
   postgres:
     image: postgres:16.4-alpine
-    container_name: tutorial_postgres
     environment:
-      POSTGRES_DB: tutorial_db
-      POSTGRES_USER: tutorial_user
-      POSTGRES_PASSWORD: tutorial_pass
-    ports:
-      - "5433:5432"
+      POSTGRES_DB: ${POSTGRES_DB:-tutorial_db}
+      POSTGRES_USER: ${POSTGRES_USER:-tutorial_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-tutorial_pass}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U tutorial_user -d tutorial_db" ]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-tutorial_user} -d ${POSTGRES_DB:-tutorial_db}"]
       interval: 10s
       timeout: 5s
       retries: 5
 
   redis:
-    image: redis:8.2.3-alpine # Use a specific, stable version
-    container_name: tutorial_redis
-    ports:
-      - "6379:6379"
+    image: redis:8.2.3-alpine
     volumes:
       - redis_data:/data
-    command: [ "redis-server", "--bind", "0.0.0.0", "--appendonly", "yes" ]
+    command: ["redis-server", "--bind", "0.0.0.0", "--appendonly", "yes"]
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 3s
       retries: 3
@@ -33,35 +27,30 @@ services:
   app:
     build:
       context: .
-      tags:
-        - "tutorial_boot:latest"
-    develop:
-      watch:
-        - action: rebuild
-          path: .
     depends_on:
-      postgres: # Wait for Postgres to be healthy
+      postgres:
         condition: service_healthy
-      redis: # Wait for Redis to be healthy
+      redis:
         condition: service_healthy
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/tutorial_db
-      SPRING_DATASOURCE_USERNAME: tutorial_user
-      SPRING_DATASOURCE_PASSWORD: tutorial_pass
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/${POSTGRES_DB:-tutorial_db}
+      SPRING_DATASOURCE_USERNAME: ${POSTGRES_USER:-tutorial_user}
+      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-tutorial_pass}
       SPRING_JPA_HIBERNATE_DDL_AUTO: validate
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: "6379"
+      APP_TEMP_ADMIN_USERNAME: ${APP_TEMP_ADMIN_USERNAME:-admin}
+      APP_TEMP_ADMIN_PASSWORD: ${APP_TEMP_ADMIN_PASSWORD:-admin}
     ports:
-      - "8080:8080"
-      - "8000:8000"
+      - "8080"
+      - "8000"
     healthcheck:
-      test: [ "CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:8080/actuator/health || exit 1" ]
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 60s # Give the app more time to start initially
+      start_period: 60s
 
-# Define the volume(s)
 volumes:
   postgres_data:
   redis_data:
